--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -18,7 +18,8 @@
     appearance: none;
 }
 body{
-    font-family: $PlexRegular + '-regular', sans-serif;  
+    font-family: $PlexRegular + '-regular', sans-serif;
+    overflow: hidden;
 }
 
 button,
