--- a/scss/devCode/_variables.scss
+++ b/scss/devCode/_variables.scss
@@ -16,10 +16,13 @@ $bgFaint: #3c3c40;
 $bgStrong: #1a1c22;
 $bgMedium: #242731;
 
+$bgExtra: #494949;
+
 // fuentes
 $fontColor: #ededed;
+$fontColorDark: #3c3c40;
 $font-texto: 16px;
-$font-titulo: 20px;
+$font-titulo: 22px;
 $PlexRegular: 'PlexSans';
 
 
