--- a/scss/components/_article.scss
+++ b/scss/components/_article.scss
@@ -4,4 +4,14 @@
 
 .paragraph{
     @include defaultFont(1);
+    margin-bottom: 30px;
+}
+
+.subSeccion{
+    width: 100%;
+    position: relative;
+    margin-bottom: 30px;
+    &:last-of-type{
+        margin-bottom: 0px;
+    }
 }
