--- a/scss/layaout/_box.scss
+++ b/scss/layaout/_box.scss
@@ -23,7 +23,6 @@
     background-color: $bgFaint;//aliceblue;
     border-radius: 10px;
     margin: 20px auto;
-    height: 1000px;
     &__page{
         position: relative;
         height: auto;
@@ -71,5 +70,5 @@
     @extend %flexBoxColumn;
     padding: 20px;
     padding-left: 35px;
-    width: calc(100%);
+    width: calc(100% - 15px);
 }
